@@ -1,3 +1,8 @@
+2007-12-19  Andreas Kirschbaum
+
+	* Close message window after command input if it was opened
+	automatically.
+
 2007-12-18  Andreas Kirschbaum
 
 	* Fix display issues with uncached multi-tile images.
